# moogy

./: README.md  package-lock.json  package.json  tsconfig.json
src/: binomial.ts  chi-squared.ts  distribution.ts  empirical.ts  exponential.ts  gamma.ts  geometric.ts  kolmogorov-smirnov.ts  negative-binomial.ts  normal.ts  poisson.ts  random.ts
src/internal/: capture.ts  checks.ts  utils.ts
src/special/: beta.ts  erf.ts  gamma.ts  logexp.ts  polygamma.ts  zeta.ts
tests/: binomial-extra.spec.ts  binomial.spec.ts  chi-squared.spec.ts  empirical.spec.ts  erf.spec.ts  exponential.spec.ts  gamma.spec.ts  geometric.spec.ts  helpers.ts  jest.d.ts  negative-binomial.spec.ts  normal.spec.ts  poisson.spec.ts  polygamma.spec.ts  random.spec.ts  special.beta.spec.ts  special.beta2.spec.ts  special.erf.spec.ts  special.gamma.spec.ts  special.polygamma.spec.ts  special.zeta.spec.ts  utils.spec.ts
tests/data/: binomial.json  normal.json  special.beta-coverage.json  special.beta.incomplete.json  special.beta.json  special.erf.json  special.gamma.derivative.json  special.gamma.incomplete.json  special.gamma.json  special.gamma.ratio.json  special.polygamma.json  special.zeta.json  utils.frexp.json
utils/reference/: CMakeLists.txt  Dockerfile  README.md
utils/reference/data/: beta.json  gamma.json
utils/reference/scripts/: eval-cases.R  special.beta.instrumented.ts
utils/reference/src/: CMakeLists.txt  moogy-reference.cpp
